# online-tables-lite

./: .claude-mcp-config.json  .gitignore  AUTO_FORMATTING.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SETUP_DEPENDENCIES.md  cleanup-before-merge.sh  cliff.toml  commitlint.config.js  dev.sh  migration_script.sql  package-lock.json  start-dev.sh  temp_test_file.txt  test-commit-chain.md  test-commit.md  test-husky-integration.md  test-workflow.md  vercel.json  verify-clean-commit.sh
.cursor/: mcp.json
.github/: BRANCH_PROTECTION_GUIDE.md  README.md  SETUP_GUIDE.md  WORKFLOW_GUIDE.md  github-branch-protection-settings.json
.github/workflows/: ci.yml  cron-jobs.yml  deploy-api.yml  deploy-web.yml  deploy.yml  production-push-checks.yml
.github/workflows-backup/: deploy-api.yml  deploy-web.yml  main-checks.yml  pr-checks.yml
.husky/: pre-commit  pre-push
apps/api/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  fly.toml  main.py  pyproject.toml  requirements.txt
apps/api/app/api/: dependencies.py
apps/api/app/api/v1/: cells.py  config.py  tables.py
apps/api/app/core/: config.py  database.py  logging.py  security.py
apps/api/app/models/: table.py
apps/api/app/services/: config_service.py  table_service.py
apps/web/: .eslintrc.json  .gitignore  DESIGN_SYSTEM.md  HYDRATION_FIX_SUMMARY.md  LANGUAGE_SWITCHER_FINAL_FIX.md  LANGUAGE_SWITCHER_FIX.md  LANGUAGE_SWITCHER_SIMPLE_FIX.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  package.json.backup  tailwind.config.ts  (+1 more)
docs/: CI-DI.md  CLAUDE_TASKS.md  TECHNOTES.md
scripts/: README.md  protect-branches.sh
supabase/: README.md  database-schema.sql  setup.sql
(+106 files in other folders)
