[project]
name = "online-table-lite-api"
version = "0.1.0"
description = "FastAPI backend for Online Tables Lite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print statements)
    "N",   # pep8-naming (naming conventions)
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "T201",  # print statements (allowed in main.py for server startup)
    "S101",  # assert statements (common in FastAPI)
    "B008",  # FastAPI dependency injection patterns (correct usage)
    "S104",  # binding to all interfaces (acceptable for dev)
    "B904",  # exception chaining (acceptable for this use case)
]
fixable = ["ALL"]
unfixable = []

# Note: Ruff doesn't support banned imports yet, but has security rules (S) enabled

[tool.ruff.lint.per-file-ignores]
# Allow print statements and dev server binding in main.py for server startup
"main.py" = ["T201", "S104"]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
